--- a/ipynb/Live3D/fixLive3D-Notebook-for-Openbayes.ipynb
+++ b/ipynb/Live3D/fixLive3D-Notebook-for-Openbayes.ipynb
@@ -120,7 +120,8 @@
       "id": "04c9297e-3534-4942-8e06-a842e4eeea36",
       "metadata": {},
       "source": [
-        "# \u521b\u5efaContent\u6587\u4ef6\u5939"
+        "## <i class=\"fa fa-folder-plus\"></i> \u521b\u5efaContent\u6587\u4ef6\u5939\n",
+        "\u521b\u5efaContent\u6587\u4ef6\u5939\u6765\u8fd8\u539fColab\u7684\u8fd0\u884c\u73af\u5883\uff0c\u4ee5\u51cf\u5c11\u4ee3\u7801\u603b\u4f53\u4fee\u6539\u91cf"
       ]
     },
     {
@@ -209,7 +210,8 @@
       "id": "7bb93ec6-d162-466b-9293-e1f3bb48af3a",
       "metadata": {},
       "source": [
-        "# \u521b\u5efaTemp\u6587\u4ef6\u5939\u5e76\u4e0b\u8f7dfast-DreamBooth.ipynb\u5230Temp\u76ee\u5f55\u4e0b"
+        "## <i class=\"fa fa-download\"></i> \u4e0b\u8f7d\u539f\u7b14\u8bb0\n",
+        "Temp\u6587\u4ef6\u5939\u5e76\u4e0b\u8f7d\u5bf9\u5e94\u7b14\u8bb0\u5230Temp\u76ee\u5f55\u4e0b"
       ]
     },
     {
@@ -222,7 +224,6 @@
         "file_name = \"Live3D-v2.ipynb\"\n",
         "url = \"https://github.com/transpchan/Live3D-v2/raw/main/notebook.ipynb\"\n",
         "\n",
-        "import wget\n",
         "import os, sys\n",
         "\n",
         "from func.env import setProxyCLI, proxyWget\n",
@@ -270,7 +271,8 @@
       "id": "489e784b-1f3a-49d0-bf8c-63273d7a4087",
       "metadata": {},
       "source": [
-        "# \u6e05\u7406Notebook\u4e2d\u7684\u8f93\u51fa\uff0c\u5bf9Colab\u7248\u4e2d\u7684\u8def\u5f84\u8fdb\u884c\u66ff\u6362\uff0c\u4ee5\u9002\u5e94openbayes\u6216autodl\u7684\u8def\u5f84"
+        "## <i class=\"fa fa-broom\"></i> \u81ea\u52a8\u9002\u914d\u7b14\u8bb0\n",
+        "\u6e05\u7406Notebook\u4e2d\u7684\u8f93\u51fa\uff0c\u5bf9Colab\u7248\u4e2d\u7684\u8def\u5f84\u8fdb\u884c\u66ff\u6362\uff0c\u4ee5\u9002\u914dopenbayes\u6216autodl\u7684\u8def\u5f84"
       ]
     },
     {
@@ -458,7 +460,8 @@
       "id": "478f77ca-1b6e-4676-9e79-0b9dfe7a3af8",
       "metadata": {},
       "source": [
-        "# \u6839\u636e\u7279\u5f81\u7247\u6bb5\u8fdb\u884c\u6574\u4e2aCell\u7684\u66ff\u6362"
+        "## <i class=\"fa fa-plus-circle\"></i> \u6279\u91cf\u63d2\u5165\u524d\u7f6eCell\n",
+        "\u6279\u91cf\u627e\u5230\u7279\u5f81\u5b57\u7b26\u4e32\u7684Cell\u4e4b\u540e\uff0c\u5728\u8fd9\u4e2aCell\u524d\u9762\u6dfb\u52a0\u591a\u4e00\u4e2aCell\uff0c\u800c\u524d\u4e00\u4e2aCell\u7684\u5185\u5bb9\u5219\u7531\u53e6\u4e00\u4e2a\u53c2\u6570\u4f20\u5165"
       ]
     },
     {
@@ -471,49 +474,49 @@
         "import json\n",
         "import copy\n",
         "\n",
-        "def modify_ipynb_file(path_to_modified, path_to_clipboard):\n",
+        "def add_cell_before_with_specific_string(path_to_modified, modify_points):\n",
         "    \"\"\"\n",
-        "    \u4fee\u6539\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\uff0c\u4f7f\u7528\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u5177\u6709\u76f8\u540c\u7279\u5f81\u5b57\u7b26\u4e32\u7684Cell\u6765\u66ff\u6362\u3002\n",
+        "    \u6279\u91cf\u627e\u5230\u7279\u5f81\u5b57\u7b26\u4e32\u7684Cell\u4e4b\u540e\uff0c\u5728\u8fd9\u4e2aCell\u524d\u9762\u6dfb\u52a0\u591a\u4e00\u4e2aCell\uff0c\u800c\u524d\u4e00\u4e2aCell\u7684\u5185\u5bb9\u5219\u7531\u53e6\u4e00\u4e2a\u53c2\u6570\u4f20\u5165\n",
+        "    \n",
+        "    Args:\n",
+        "        path_to_modified: (str) \u8981\u4fee\u6539\u7684\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "        modify_points: (list[dict]) \u6bcf\u4e2a\u8981\u4fee\u6539\u7684\u70b9\u7684\u4fe1\u606f,\u6bcf\u4e2a\u70b9\u9700\u8981\u4f20\u5165\u4e09\u4e2a\u53c2\u6570,\n",
+        "                      new_cell_content: (str)\u65b0\u589e\u52a0\u7684cell\u7684\u5185\u5bb9\n",
+        "                      feature_string: (str)\u7279\u5f81\u5b57\u7b26\u4e32\n",
+        "                      cell_type: (str) cell\u7c7b\u578b,\u53ef\u80fd\u662f'code','markdown','text'\n",
         "    \"\"\"\n",
         "    with open(path_to_modified, 'r') as f:\n",
         "        modified = json.load(f)\n",
-        "    with open(path_to_clipboard, 'r') as f:\n",
-        "        clipboard = json.load(f)\n",
-        "    replaceList = [\n",
-        "            '@markdown # Dependencies',\n",
-        "        ]        \n",
-        "    for cell_modified in modified['cells'][:]:\n",
-        "        replace_cell = False\n",
-        "        for line_modified in cell_modified['source']:\n",
-        "            if any(keyword in line_modified for keyword in replaceList):\n",
-        "                replace_cell = True\n",
+        "\n",
+        "    for point in modify_points:\n",
+        "        new_cell_content = point['new_cell_content']\n",
+        "        feature_string = point['feature_string']\n",
+        "        cell_type = point['cell_type']\n",
+        "        for index, cell_modified in enumerate(modified['cells']):\n",
+        "            for line_modified in cell_modified['source']:\n",
+        "                if feature_string in line_modified:\n",
+        "                    modified['cells'].insert(index, {\"cell_type\": cell_type, \"metadata\": {}, \"source\": [new_cell_content]})\n",
+        "                    print(f'\u6210\u529f\u5728\u5305\u542b\u7279\u5f81\u5b57\u7b26\u4e32 \"{feature_string}\" \u7684\u4ee3\u7801\u5355\u5143\u683c\u4e4b\u524d\u6dfb\u52a0\u65b0\u7684\u5355\u5143\u683c')\n",
+        "                    break\n",
+        "            if feature_string in line_modified:\n",
         "                break\n",
-        "        if replace_cell:\n",
-        "            for cell_clipboard in clipboard['cells'][:]:\n",
-        "                for line_clipboard in cell_clipboard['source']:\n",
-        "                    for i, keyword in enumerate(replaceList):\n",
-        "                        if keyword in line_clipboard:\n",
-        "                            cell_modified['source'] = copy.deepcopy(cell_clipboard['source'])\n",
-        "                            print(f'\u4ee3\u7801\u5355\u5143\u683c\u5305\u542b\u7279\u5f81\u5b57\u7b26\u4e32\u201c{keyword}\u201d\u7684\u5185\u5bb9\u5df2\u88ab\u4ee3\u7801\u526a\u8d34\u677f\u4e2d\u5305\u542b\u76f8\u540c\u7279\u5f81\u5b57\u7b26\u4e32\u7684\u4ee3\u7801\u5355\u5143\u683c\u6240\u66ff\u6362\u3002')\n",
-        "                            break\n",
         "    with open(path_to_modified, 'w') as f:\n",
         "        json.dump(modified, f)\n",
         "\n",
         "# \u793a\u4f8b\uff1a\u4fee\u6539\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\uff0c\u4f7f\u7528\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u7684\u5185\u5bb9\n",
+        "modify_points = [\n",
+        "    {\n",
+        "        'new_cell_content': '%cd /openbayes/home/content/',\n",
+        "        'feature_string': '#@title Download the code',\n",
+        "        'cell_type': 'code'\n",
+        "    },\n",
+        "]\n",
         "\n",
-        "modify_ipynb_file(\n",
+        "add_cell_before_with_specific_string(\n",
         "    path_to_modified=newNotebookPath,\n",
-        "    path_to_clipboard='./clipboard/live3D-ClipboardForOpenbayes.ipynb'\n",
+        "    modify_points=modify_points\n",
         ")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "16e19b75-ca35-4333-963c-39c086f17d61",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
