Migrate dreambooth directory to the ipynb folder

--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -6,9 +6,7 @@
       "metadata": {},
       "source": [
         "# \u628a\u5f53\u524drepo\u6839\u76ee\u5f55\u52a0\u5165 Python \u641c\u7d22\u6a21\u5757\u7684\u8def\u5f84\u5217\u8868"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -52,9 +50,7 @@
       "metadata": {},
       "source": [
         "# Colab\u7684\u9ed8\u8ba4\u73af\u5883\u8ddf\u8fd9\u91cc\u7684\u9ed8\u8ba4\u73af\u5883\u6709\u5dee\u5f02\uff0c\u9700\u8981\u5b89\u88c5\u989d\u5916\u7684\u4f9d\u8d56"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -117,9 +113,7 @@
       "metadata": {},
       "source": [
         "# \u914d\u7f6eaccelerate"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -138,9 +132,7 @@
       "metadata": {},
       "source": [
         "# \u521b\u5efaTemp\u6587\u4ef6\u5939\u5e76\u4e0b\u8f7dfast-DreamBooth.ipynb\u5230Temp\u76ee\u5f55\u4e0b"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -211,9 +203,7 @@
       "metadata": {},
       "source": [
         "# \u521b\u5efaContent\u6587\u4ef6\u5939"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -302,9 +292,7 @@
       "metadata": {},
       "source": [
         "# \u81ea\u52a8\u641c\u5bfb\u5e76\u6302\u8f7d\u6570\u636e\u96c6\u548c\u6a21\u578b\uff0c\u6216\u5bf9\u6570\u636e\u96c6\u8fdb\u884c\u89e3\u538b\uff0c\u6216\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08Symbol Link \u8f6f\u8fde\u63a5\uff09"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -420,9 +408,7 @@
       "metadata": {},
       "source": [
         "# \u5b89\u88c5Diffusers"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -485,9 +471,7 @@
       "metadata": {},
       "source": [
         "# \u627e\u5230Diffusers\u9879\u76ee\u4e2d\u7684dreambooth.py\u8fdb\u884c\u6253\u5370\u4fe1\u606f\u65b9\u9762\u7684\u4fee\u6539"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -614,9 +598,7 @@
       "metadata": {},
       "source": [
         "# \u6e05\u7406Notebook\u4e2d\u7684\u8f93\u51fa\uff0c\u5bf9Colab\u7248\u4e2d\u7684\u8def\u5f84\u8fdb\u884c\u66ff\u6362\uff0c\u4ee5\u9002\u5e94openbayes\u6216autodl\u7684\u8def\u5f84"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -810,9 +792,7 @@
       "metadata": {},
       "source": [
         "# \u6839\u636e\u7279\u5f81\u7247\u6bb5\u8fdb\u884c\u6574\u4e2aCell\u7684\u66ff\u6362"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -870,7 +850,7 @@
         "\n",
         "modify_ipynb_file(\n",
         "    path_to_modified=newNotebookPath,\n",
-        "    path_to_clipboard='./clip/clipForOpenbayes.ipynb'\n",
+        "    path_to_clipboard='./clipboard/dreambooth-ClipboardForOpenbayes.ipynb'\n",
         ")"
       ]
     },
@@ -880,9 +860,7 @@
       "metadata": {},
       "source": [
         "# \u5bf9\u6307\u5b9a\u7684\u53d8\u91cf\u540d\u8fdb\u884c\u5b57\u7b26\u4e32\u548c\u53c2\u6570\u7684\u66ff\u6362"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -975,9 +953,7 @@
       "metadata": {},
       "source": [
         "# \u68c0\u67e5\u6700\u7ec8\u7248\u672c\u7684ipynb\u91cc\u9762\u7684\u8d4b\u503c\u60c5\u51b5"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
@@ -1117,7 +1093,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     },
     "vscode": {
       "interpreter": {
