--- a/ipynb/dreambooth/clipboard/dreambooth-ClipboardForOpenbayes.ipynb
+++ b/ipynb/dreambooth/clipboard/dreambooth-ClipboardForOpenbayes.ipynb
@@ -7,9 +7,35 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import sys\n",
+        "import os,sys\n",
+        "\n",
+        "def find_repo_root():\n",
+        "    # \u83b7\u53d6\u5f53\u524d\u811a\u672c\u7684\u7edd\u5bf9\u8def\u5f84\n",
+        "    try:\n",
+        "        # \u5982\u679c\u5f53\u524d\u8fd0\u884c\u73af\u5883\u662f Jupyter Notebook\uff0c\u4f7f\u7528\u5f53\u524d\u5de5\u4f5c\u76ee\u5f55\n",
+        "        script_path = os.path.abspath('.')\n",
+        "    except NameError:\n",
+        "        # \u5426\u5219\uff0c\u4f7f\u7528 __file__ \u53d8\u91cf\n",
+        "        script_path = os.path.abspath(__file__)\n",
+        "    # \u521d\u59cb\u5316\u5b58\u50a8\u7ed3\u679c\u7684\u53d8\u91cf\n",
+        "    result = None\n",
+        "    # \u5faa\u73af\u6c42\u5f53\u524d\u8def\u5f84\u7684\u7236\u76ee\u5f55\uff0c\u76f4\u5230\u627e\u5230`.git`\u6587\u4ef6\u5939\n",
+        "    while True:\n",
+        "        # \u5c06\u5f53\u524d\u8def\u5f84\u7684\u7236\u76ee\u5f55\u8d4b\u503c\u7ed9\u5f53\u524d\u8def\u5f84\n",
+        "        script_path = os.path.dirname(script_path)\n",
+        "        # \u5224\u65ad\u5f53\u524d\u8def\u5f84\u662f\u5426\u5b58\u5728`.git`\u6587\u4ef6\u5939\n",
+        "        if os.path.isdir(os.path.join(script_path, '.git')):\n",
+        "            # \u5982\u679c\u5b58\u5728\uff0c\u5c06\u5f53\u524d\u8def\u5f84\u5b58\u50a8\u5728\u7ed3\u679c\u53d8\u91cf\u4e2d\n",
+        "            result = script_path\n",
+        "        # \u5224\u65ad\u5f53\u524d\u8def\u5f84\u662f\u5426\u4e3a\u6839\u76ee\u5f55\uff08\u5373\u662f\u5426\u5df2\u7ecf\u641c\u7d22\u5230\u6700\u5916\u5c42\uff09\n",
+        "        if script_path == '/':\n",
+        "            # \u5982\u679c\u662f\uff0c\u8fd4\u56de\u7ed3\u679c\u53d8\u91cf\u7684\u503c\n",
+        "            return result\n",
+        "        \n",
+        "repo_root_dir=find_repo_root()\n",
+        "sys.path.append(repo_root_dir)\n",
+        "\n",
         "from IPython.utils import capture\n",
-        "sys.path.append('../../')\n",
         "from func.env import setProxyCLI,proxyWget\n",
         "cb=setProxyCLI()\n",
         "proxy=cb['proxy']\n",
@@ -131,7 +157,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     }
   },
   "nbformat": 4,
