--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -365,7 +365,8 @@
         "                )\n",
         "        else:\n",
         "            print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
-        "            %run ../tools/model_convert_tools/convertodiffv2.ipynb\n",
+        "            convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
+        "            %run $convertodiffv2_path\n",
         "            check_model_and_make_symbollink()\n",
         "    \n",
         "    check_model_and_make_symbollink()\n",
