cancel "Dependencies" cell replacement

--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -65,9 +65,9 @@
         "    \"black[jupyter]\",\n",
         "    \"wget\",\n",
         "    \"transformers\",\n",
-        "    \"bitsandbytes\",\n",
+        "    # \"bitsandbytes==0.36.0.post2\",\n",
         "    \"jax\",\n",
-        "    \"xformers\",\n",
+        "    \"xformers==0.0.16rc424\",\n",
         "    \"triton==2.0.0.dev20221120\",\n",
         "]\n",
         "\n",
@@ -667,6 +667,7 @@
         "    for cell in nb[\"cells\"]:\n",
         "        if cell[\"cell_type\"] == \"code\":\n",
         "            # Initialize the flag variable\n",
+        "            import_find_repo_root_added = False\n",
         "            import_added = False\n",
         "            # \u9690\u85cf\u4ee3\u7801\n",
         "            cell[\"metadata\"] = {\"collapsed\": True}\n",
@@ -711,14 +712,12 @@
         "                # \u66ff\u6362@param{type: 'xxx'}\u4e2d\u7684\u5355\u5f15\u53f7\u4e3a\u53cc\u5f15\u53f7\n",
         "                if \"@param\" in line:\n",
         "                    cell[\"source\"][i] = line.replace(\"'\", '\"')\n",
-        "\n",
+        "                    \n",
         "            for i, line in enumerate(cell[\"source\"]):\n",
         "                # Check if the line contains \"wget\" and add the import statement if necessary\n",
         "                if \"wget\" in line and not import_added:\n",
         "                    import_statements = [\n",
-        "                        \"import sys\",\n",
         "                        \"from IPython.utils import capture\",\n",
-        "                        \"sys.path.append('../../')\",\n",
         "                        \"from func.env import setProxyCLI,proxyWget\",\n",
         "                        \"cb=setProxyCLI()\",\n",
         "                        \"proxy=cb['proxy']\",\n",
@@ -733,6 +732,37 @@
         "                    cell[\"source\"] = import_statements_with_newline + cell[\"source\"]\n",
         "                    # Set the flag to indicate that the import has been added\n",
         "                    import_added = True\n",
+        "                    \n",
+        "            for i, line in enumerate(cell[\"source\"]):\n",
+        "                # Check if the line contains \"wget\" and add the import statement if necessary\n",
+        "                import textwrap\n",
+        "                if \"wget\" in line and not import_find_repo_root_added:\n",
+        "                    import_statements = [\n",
+        "'''import os,sys\n",
+        "def find_repo_root():\n",
+        "    try:\n",
+        "        script_path = os.path.abspath('.')\n",
+        "    except NameError:\n",
+        "        script_path = os.path.abspath(__file__)\n",
+        "    result = None\n",
+        "    while True:\n",
+        "        script_path = os.path.dirname(script_path)\n",
+        "        if os.path.isdir(os.path.join(script_path, '.git')):\n",
+        "            result = script_path\n",
+        "        if script_path == '/':\n",
+        "            return result\n",
+        "repo_root_dir=find_repo_root()\n",
+        "sys.path.append(repo_root_dir)\n",
+        "'''\n",
+        "                    ]\n",
+        "                    import_statements_with_newline = [\n",
+        "                        s + \"\\n\" for s in import_statements\n",
+        "                    ]\n",
+        "                    \n",
+        "                    # print(import_statements_with_newline)\n",
+        "                    cell[\"source\"] = import_statements_with_newline + cell[\"source\"]\n",
+        "                    # Set the flag to indicate that the import has been added\n",
+        "                    import_find_repo_root_added = True\n",
         "                    \n",
         "            for i, line in enumerate(cell[\"source\"]):    \n",
         "                # \u628apip\u5b89\u88c5\u7684\u9759\u9ed8\u53bb\u6389\n",
@@ -817,7 +847,7 @@
         "\n",
         "    # \u7279\u5f81\u5b57\u7b26\u4e32\u5217\u8868\uff0c\u7528\u4e8e\u641c\u7d22\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u4e2d\u7684Cell\u548c\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u7684Cell\n",
         "    replaceList = [\n",
-        "            '@markdown # Dependencies',\n",
+        "            # '@markdown # Dependencies',\n",
         "        ]        \n",
         "    \n",
         "    # \u904d\u5386\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u4e2d\u7684\u6240\u6709Cell\n",
@@ -1076,6 +1106,14 @@
         "\n",
         "# refsColor()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1ca50c35-d546-4156-bf91-2e7a6c864827",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
