add auto create sessions folder

--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -65,7 +65,7 @@
         "    \"black[jupyter]\",\n",
         "    \"wget\",\n",
         "    \"transformers\",\n",
-        "    # \"bitsandbytes==0.36.0.post2\",\n",
+        "    \"bitsandbytes==0.36.0.post2\",\n",
         "    \"jax\",\n",
         "    \"xformers==0.0.16rc424\",\n",
         "    \"triton==2.0.0.dev20221120\",\n",
@@ -284,6 +284,26 @@
         "content_folder = content_path\n",
         "if not os.path.exists(content_folder):\n",
         "    os.makedirs(content_folder)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "55f299d3-9f22-4b19-8937-6f494883253e",
+      "metadata": {},
+      "source": [
+        "# \u521b\u5efaSessions\u6587\u4ef6\u5939"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8d3498b2-aa32-4826-8766-4a46ae22f020",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "sessions_path = os.path.join(content_path,'./gdrive/MyDrive/Fast-Dreambooth/Sessions')\n",
+        "!mkdir -p $sessions_path"
       ]
     },
     {
@@ -1132,7 +1152,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.15"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
