Put form input replacements on top

--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -2,6 +2,32 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "b3dd82f9-24bf-470d-bdb4-54a237419843",
+      "metadata": {},
+      "source": [
+        "# \u8bbe\u7f6e\u8fd9\u6b21\u8bad\u7ec3\u7684\u53d8\u91cf\uff08\u5c06\u4f1a\u81ea\u52a8\u586b\u5165ipynb\u4e2d\u7684\u8868\u5355\uff09"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "44878006-00a8-41ba-8fc3-103c13bd2128",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "form_inputs_replacements = {\n",
+        "    \"Model_Version\": \"V2.1-768px\",\n",
+        "    \"Session_Name\": \"FuXingHao768\",\n",
+        "    \"Crop_size\": 768,\n",
+        "    \"Remove_existing_instance_images\": False,\n",
+        "    # \"IMAGES_FOLDER_OPTIONAL\": \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\",\n",
+        "    \"Crop_images\": False,\n",
+        "    \"Resolution\": 768,\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "c5b4ea5b-d812-4bfe-885d-231e55c1a7d4",
       "metadata": {},
       "source": [
@@ -288,10 +314,10 @@
     },
     {
       "cell_type": "markdown",
-      "id": "55f299d3-9f22-4b19-8937-6f494883253e",
+      "id": "6cd98416-eaf3-4c14-bcd0-4be529ad95f0",
       "metadata": {},
       "source": [
-        "# \u521b\u5efaSessions\u6587\u4ef6\u5939"
+        "# \u521b\u5efaSessions\u6587\u4ef6\u5939\u548c\u8fd9\u6b21\u8bad\u7ec3\u7684Sessions\u6587\u4ef6\u5939"
       ]
     },
     {
@@ -302,8 +328,11 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "sessions_path = os.path.join(content_path,'./gdrive/MyDrive/Fast-Dreambooth/Sessions')\n",
-        "!mkdir -p $sessions_path"
+        "session_name = form_inputs_replacements['Session_Name']\n",
+        "session_path = os.path.join(content_path,'./gdrive/MyDrive/Fast-Dreambooth/Sessions',session_name,'instance_images')\n",
+        "session_path=os.path.realpath(session_path)\n",
+        "print(session_path)\n",
+        "!mkdir -p $session_path"
       ]
     },
     {
@@ -981,21 +1010,9 @@
         "\n",
         "    return outputFilePath\n",
         "\n",
-        "\n",
-        "# \u66f4\u65b0\u53d8\u91cf\n",
-        "replacements = {\n",
-        "    \"Model_Version\": \"V2.1-768px\",\n",
-        "    \"Session_Name\": \"FuXingHao768\",\n",
-        "    \"Crop_size\": 768,\n",
-        "    \"Remove_existing_instance_images\": False,\n",
-        "    # \"IMAGES_FOLDER_OPTIONAL\": \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\",\n",
-        "    \"Crop_images\": False,\n",
-        "    \"Resolution\": 768,\n",
-        "}\n",
-        "\n",
         "# \u66f4\u65b0\u53d8\u91cf\n",
         "updatedDataNotebookPath = modify_file_name(newNotebookPath)\n",
-        "update_ipynb_vars(newNotebookPath, updatedDataNotebookPath, replacements)"
+        "update_ipynb_vars(newNotebookPath, updatedDataNotebookPath, form_inputs_replacements)"
       ]
     },
     {
@@ -1152,7 +1169,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     },
     "vscode": {
       "interpreter": {
