--- a/ipynb/invokeai/OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/OneClick-launch-invokeai.ipynb
@@ -26,6 +26,9 @@
         "    except NameError:\n",
         "        # \u5426\u5219\uff0c\u4f7f\u7528 __file__ \u53d8\u91cf\n",
         "        script_path = os.path.abspath(__file__)\n",
+        "    # \u5224\u65ad\u5f53\u524d\u811a\u672c\u76ee\u5f55\u662f\u5426\u5b58\u5728`.git`\u6587\u4ef6\u5939\n",
+        "    if os.path.isdir(os.path.join(script_path, '.git')):\n",
+        "        return script_path\n",
         "    # \u521d\u59cb\u5316\u5b58\u50a8\u7ed3\u679c\u7684\u53d8\u91cf\n",
         "    result = None\n",
         "    # \u5faa\u73af\u6c42\u5f53\u524d\u8def\u5f84\u7684\u7236\u76ee\u5f55\uff0c\u76f4\u5230\u627e\u5230`.git`\u6587\u4ef6\u5939\n",
@@ -43,8 +46,14 @@
         "        \n",
         "repo_root_dir=find_repo_root()\n",
         "sys.path.append(repo_root_dir)\n",
+        "print(repo_root_dir)\n",
         "# \u83b7\u53d6repo\u6240\u5728\u7684\u6839\u76ee\u5f55\n",
-        "root_dir = os.path.dirname(repo_root_dir)"
+        "root_dir = os.path.dirname(repo_root_dir)\n",
+        "# \u83b7\u53d6\u5f53\u524d\u73af\u5883\u540d\u79f0\u4e0e\u5f53\u524d\u73af\u5883content\u8def\u5f84\n",
+        "from func.env import detect_environment\n",
+        "env_cb = detect_environment()\n",
+        "env_name = env_cb['env_name']\n",
+        "content_path = env_cb['content_path']"
       ]
     },
     {
@@ -87,17 +96,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "invoke_outputs_dir = '/root/autodl-nas/invoke_outputs'\n",
         "port = 6006\n",
         "\n",
+        "if env_name == 'AutoDL':\n",
+        "    invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
+        "    invokeai_init_path='/root/invokeai/invokeai.init'\n",
+        "elif env_name == 'OpenBayes':\n",
+        "    invoke_outputs_dir=os.path.realpath(os.path.join(root_dir,'./invoke_outputs'))\n",
+        "    invokeai_init_path=os.path.realpath(os.path.join(root_dir,'./invokeai/invokeai.init'))\n",
+        "    \n",
         "import re\n",
         "\n",
         "def add_line(lines, line_to_add):\n",
         "    # \u5982\u679c\u5bf9\u5e94\u7684\u53c2\u6570\u548c\u6587\u672c\u4e0d\u5b58\u5728\uff0c\u5728\u6587\u4ef6\u672b\u5c3e\u589e\u52a0\u4e00\u884c\n",
         "    if not any(line.strip() == f'{line_to_add}' for line in lines):\n",
         "        lines.append(f'{line_to_add}\\n')\n",
-        "\n",
-        "invokeai_init_path='/root/invokeai/invokeai.init'\n",
         "\n",
         "# \u8bfb\u53d6\u6587\u4ef6\n",
         "with open(invokeai_init_path, 'r') as f:\n",
@@ -126,7 +139,7 @@
         "# lines = list(set(lines))\n",
         "\n",
         "# \u5c06\u4fee\u6539\u540e\u7684\u5185\u5bb9\u5199\u56de\u6587\u4ef6\n",
-        "with open('/root/invokeai/invokeai.init', 'w') as f:\n",
+        "with open(invokeai_init_path, 'w') as f:\n",
         "    f.writelines(lines)\n"
       ]
     },
@@ -182,7 +195,7 @@
         "\n",
         "final_args = base_args[:]\n",
         "final_args += [\n",
-        "    'python scripts/invoke.py',\n",
+        "    'python scripts/invoke.py --model inpainting-1.5',\n",
         "]\n",
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
@@ -214,7 +227,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.15"
     }
   },
   "nbformat": 4,
