--- a/ipynb/invokeai/OneClick-install-invokeai.ipynb
+++ b/ipynb/invokeai/OneClick-install-invokeai.ipynb
@@ -26,6 +26,9 @@
         "    except NameError:\n",
         "        # \u5426\u5219\uff0c\u4f7f\u7528 __file__ \u53d8\u91cf\n",
         "        script_path = os.path.abspath(__file__)\n",
+        "    # \u5224\u65ad\u5f53\u524d\u811a\u672c\u76ee\u5f55\u662f\u5426\u5b58\u5728`.git`\u6587\u4ef6\u5939\n",
+        "    if os.path.isdir(os.path.join(script_path, '.git')):\n",
+        "        return script_path\n",
         "    # \u521d\u59cb\u5316\u5b58\u50a8\u7ed3\u679c\u7684\u53d8\u91cf\n",
         "    result = None\n",
         "    # \u5faa\u73af\u6c42\u5f53\u524d\u8def\u5f84\u7684\u7236\u76ee\u5f55\uff0c\u76f4\u5230\u627e\u5230`.git`\u6587\u4ef6\u5939\n",
@@ -43,8 +46,69 @@
         "        \n",
         "repo_root_dir=find_repo_root()\n",
         "sys.path.append(repo_root_dir)\n",
+        "print(repo_root_dir)\n",
         "# \u83b7\u53d6repo\u6240\u5728\u7684\u6839\u76ee\u5f55\n",
-        "root_dir = os.path.dirname(repo_root_dir)"
+        "root_dir = os.path.dirname(repo_root_dir)\n",
+        "# \u83b7\u53d6\u5f53\u524d\u73af\u5883\u540d\u79f0\u4e0e\u5f53\u524d\u73af\u5883content\u8def\u5f84\n",
+        "from func.env import detect_environment\n",
+        "env_cb = detect_environment()\n",
+        "env_name = env_cb['env_name']\n",
+        "content_path = env_cb['content_path']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "454a87fe-2145-4818-9e72-f71baa328456",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-arrow-down\"></i> \u5b89\u88c5\u5fc5\u8981\u4f9d\u8d56"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ec9fbee5-aa7e-48e1-8676-423327390a21",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import subprocess\n",
+        "\n",
+        "libraries_to_install = [\n",
+        "    \n",
+        "]\n",
+        "\n",
+        "tools_to_install = [\n",
+        "    \"iputils-ping\",\n",
+        "]\n",
+        "\n",
+        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
+        "for library in libraries_to_install:\n",
+        "    if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        continue\n",
+        "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
+        "        !pip install $library\n",
+        "    else:\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        \n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "update_needed = False\n",
+        "for tool in tools_to_install:\n",
+        "    exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "    if exit_code != 0:\n",
+        "        update_needed = True\n",
+        "        break\n",
+        "    else:\n",
+        "        print(f\"\u3010 {tool} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "if update_needed:\n",
+        "    !apt-get update\n",
+        "    for tool in tools_to_install:\n",
+        "        exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "        if exit_code != 0:\n",
+        "            !apt-get install -y $tool\n",
+        "    \n"
       ]
     },
     {
@@ -106,30 +170,41 @@
         "env_yml_path=os.path.join(invokeai_dir,'environment.yml')\n",
         "linux_env_yml_path=os.path.join(invokeai_dir,'environments-and-requirements/environment-lin-cuda.yml')\n",
         "\n",
-        "if os.path.realpath(env_yml_path)==linux_env_yml_path:\n",
-        "    print(f'environment.yml\u5df2\u94fe\u63a5\u5230 InvokeAI \u6839\u76ee\u5f55\u4e2d\uff0c\u5e76\u4e14\u5b83\u6307\u5411 {linux_env_yml_path}')\n",
-        "\n",
+        "def check_env_installed():\n",
         "    import subprocess\n",
         "    # Use the subprocess module to run the \"conda env list\" command\n",
         "    result = subprocess.run([\"conda\", \"env\", \"list\"], stdout=subprocess.PIPE)\n",
         "    # Get the output of the command as a string and split it into a list of lines\n",
-        "    output = result.stdout.decode(\"utf-8\").split(\"\\n\")\n",
-        "\n",
+        "    output = result.stdout.decode(\"utf-8\")\n",
         "    # Check if the \"invokeai\" environment is in the list\n",
-        "    if \"invokeai\" in output:\n",
+        "    print(output)\n",
+        "    return output\n",
+        "\n",
+        "def configure_invokeai():\n",
+        "    invokeai_config_and_models_dir = os.path.join(root_dir,'invokeai')\n",
+        "    # conda\u6fc0\u6d3binvokeai\u73af\u5883\uff0c\u4e14\u8fd0\u884c\u914d\u7f6e.py\u6587\u4ef6\n",
+        "    !$proxy &&\\\n",
+        "    source activate &&\\\n",
+        "    conda activate invokeai &&\\\n",
+        "    cd $invokeai_dir &&\\\n",
+        "    python scripts/configure_invokeai.py -y --root_dir $invokeai_config_and_models_dir\n",
+        "\n",
+        "if os.path.realpath(env_yml_path)==linux_env_yml_path:\n",
+        "    print(f'environment.yml\u5df2\u94fe\u63a5\u5230 InvokeAI \u6839\u76ee\u5f55\u4e2d\uff0c\u5e76\u4e14\u5b83\u6307\u5411 {linux_env_yml_path}')\n",
+        "\n",
+        "    if \"invokeai\" not in check_env_installed():\n",
         "        # If it is, activate the environment\n",
         "        # \u901a\u8fc7conda\u6784\u5efa\u9002\u5408\u7684python\u73af\u5883\n",
         "        !$proxy &&\\\n",
         "        cd $invokeai_dir &&\\\n",
         "        conda env update\n",
+        "        \n",
+        "        if \"invokeai\" in check_env_installed():\n",
+        "            print('\u5df2\u7ecf\u5b58\u5728\u540d\u4e3ainvokeai\u7684\u865a\u62df\u73af\u5883')\n",
+        "            configure_invokeai()\n",
         "    else:\n",
         "        print('\u5df2\u7ecf\u5b58\u5728\u540d\u4e3ainvokeai\u7684\u865a\u62df\u73af\u5883')\n",
-        "        # conda\u6fc0\u6d3binvokeai\u73af\u5883\uff0c\u4e14\u8fd0\u884c\u914d\u7f6e.py\u6587\u4ef6\n",
-        "        !$proxy &&\\\n",
-        "        source activate &&\\\n",
-        "        conda activate invokeai &&\\\n",
-        "        cd $invokeai_dir &&\\\n",
-        "        python scripts/configure_invokeai.py -y"
+        "        configure_invokeai()\n"
       ]
     },
     {
@@ -290,16 +365,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
+        "port = 6006\n",
         "\n",
+        "if env_name == 'AutoDL':\n",
+        "    invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
+        "    invokeai_init_path='/root/invokeai/invokeai.init'\n",
+        "elif env_name == 'OpenBayes':\n",
+        "    invoke_outputs_dir=os.path.realpath(os.path.join(root_dir,'./invoke_outputs'))\n",
+        "    invokeai_init_path=os.path.realpath(os.path.join(root_dir,'./invokeai/invokeai.init'))\n",
+        "    \n",
         "import re\n",
         "\n",
         "def add_line(lines, line_to_add):\n",
         "    # \u5982\u679c\u5bf9\u5e94\u7684\u53c2\u6570\u548c\u6587\u672c\u4e0d\u5b58\u5728\uff0c\u5728\u6587\u4ef6\u672b\u5c3e\u589e\u52a0\u4e00\u884c\n",
         "    if not any(line.strip() == f'{line_to_add}' for line in lines):\n",
         "        lines.append(f'{line_to_add}\\n')\n",
-        "\n",
-        "invokeai_init_path='/root/invokeai/invokeai.init'\n",
         "\n",
         "# \u8bfb\u53d6\u6587\u4ef6\n",
         "with open(invokeai_init_path, 'r') as f:\n",
@@ -310,8 +390,8 @@
         "    lines[i] = re.sub(r'--outdir=\"(.*)\"', f'--outdir=\"{invoke_outputs_dir}\"', line)\n",
         "\n",
         "#\u8ffd\u52a0\u989d\u5916\u7684\u53c2\u6570\n",
-        "add_line(lines,'--port=6006')\n",
-        "add_line(lines,'--web')\n",
+        "add_line(lines,f'--port={port}') #\u8bbe\u5b9a\u7aef\u53e3\n",
+        "add_line(lines,'--web') #\u4ee5webui\u7684\u5f62\u5f0f\u542f\u52a8\n",
         "\n",
         "# \u53bb\u9664\u91cd\u590d\u7684\u884c\n",
         "seen = {}\n",
@@ -328,7 +408,7 @@
         "# lines = list(set(lines))\n",
         "\n",
         "# \u5c06\u4fee\u6539\u540e\u7684\u5185\u5bb9\u5199\u56de\u6587\u4ef6\n",
-        "with open('/root/invokeai/invokeai.init', 'w') as f:\n",
+        "with open(invokeai_init_path, 'w') as f:\n",
         "    f.writelines(lines)\n"
       ]
     },
@@ -458,7 +538,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.15"
     }
   },
   "nbformat": 4,
