fix huge bug for InvokeAI

--- a/init.ipynb
+++ b/init.ipynb
@@ -18,7 +18,7 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "\n",
+        "    \"jupyterthemes\"\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -114,9 +114,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "a856c610-444e-4a67-8acf-889732993d81",
+      "metadata": {},
+      "source": [
+        "# \u66f4\u6362\u4e3b\u9898"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
-      "id": "1cef3a67-ecff-4ae0-8331-bb65989d42c0",
+      "id": "4afca42d-4aef-4de8-99c7-4c683e34ca79",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!jt -l\n",
+        "!jt -t 'oceans16'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2fb16afb-337a-40b6-be3a-cf0d1f597b4c",
       "metadata": {},
       "outputs": [],
       "source": []
@@ -138,7 +157,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.15"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
