--- a/ipynb/invokeai/0-OneClick-install-invokeai_from_zero.ipynb
+++ b/ipynb/invokeai/0-OneClick-install-invokeai_from_zero.ipynb
@@ -155,20 +155,21 @@
       "source": [
         "import os\n",
         "\n",
-        "invokeai_dir=os.path.join(root_dir,'InvokeAI')\n",
+        "InvokeAI_dir=os.path.join(root_dir,'InvokeAI')\n",
+        "InvokeAI_runtime_dir = os.path.join(root_dir,'InvokeAI_runtime')\n",
         "\n",
-        "if not os.path.exists(invokeai_dir):\n",
+        "if not os.path.exists(InvokeAI_dir):\n",
         "    !$proxy &&\\\n",
         "    cd $root_dir &&\\\n",
         "    git clone https://github.com/invoke-ai/InvokeAI.git\n",
         "else:\n",
-        "    print(f'{invokeai_dir}\u5df2\u7ecf\u5b58\u5728\uff0c\u65e0\u9700\u514b\u9686')\n",
+        "    print(f'{InvokeAI_dir}\u5df2\u7ecf\u5b58\u5728\uff0c\u65e0\u9700\u514b\u9686')\n",
         "\n",
-        "!cd $invokeai_dir &&\\\n",
+        "!cd $InvokeAI_dir &&\\\n",
         "ln -sf environments-and-requirements/environment-lin-cuda.yml environment.yml\n",
         "\n",
-        "env_yml_path=os.path.join(invokeai_dir,'environment.yml')\n",
-        "linux_env_yml_path=os.path.join(invokeai_dir,'environments-and-requirements/environment-lin-cuda.yml')\n",
+        "env_yml_path=os.path.join(InvokeAI_dir,'environment.yml')\n",
+        "linux_env_yml_path=os.path.join(InvokeAI_dir,'environments-and-requirements/environment-lin-cuda.yml')\n",
         "\n",
         "def check_env_installed():\n",
         "    import subprocess\n",
@@ -181,13 +182,12 @@
         "    return output\n",
         "\n",
         "def configure_invokeai():\n",
-        "    invokeai_config_and_models_dir = os.path.join(root_dir,'invokeai')\n",
         "    # conda\u6fc0\u6d3binvokeai\u73af\u5883\uff0c\u4e14\u8fd0\u884c\u914d\u7f6e.py\u6587\u4ef6\n",
         "    !$proxy &&\\\n",
         "    source activate &&\\\n",
         "    conda activate invokeai &&\\\n",
-        "    cd $invokeai_dir &&\\\n",
-        "    python scripts/configure_invokeai.py -y --root_dir $invokeai_config_and_models_dir\n",
+        "    cd $InvokeAI_dir &&\\\n",
+        "    python scripts/configure_invokeai.py -y --root_dir $InvokeAI_runtime_dir\n",
         "\n",
         "if os.path.realpath(env_yml_path)==linux_env_yml_path:\n",
         "    print(f'environment.yml\u5df2\u94fe\u63a5\u5230 InvokeAI \u6839\u76ee\u5f55\u4e2d\uff0c\u5e76\u4e14\u5b83\u6307\u5411 {linux_env_yml_path}')\n",
@@ -196,7 +196,7 @@
         "        # If it is, activate the environment\n",
         "        # \u901a\u8fc7conda\u6784\u5efa\u9002\u5408\u7684python\u73af\u5883\n",
         "        !$proxy &&\\\n",
-        "        cd $invokeai_dir &&\\\n",
+        "        cd $InvokeAI_dir &&\\\n",
         "        conda env update\n",
         "        \n",
         "        if \"invokeai\" in check_env_installed():\n",
@@ -239,7 +239,7 @@
         "    proxy,'&&',\n",
         "    'source activate','&&',\n",
         "    'conda activate invokeai','&&',\n",
-        "    f'cd {invokeai_dir}','&&'\n",
+        "    f'cd {InvokeAI_dir}','&&'\n",
         "]\n",
         "\n",
         "def check_patchmatch_installed():\n",
@@ -538,7 +538,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.15"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
