--- a/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
@@ -82,6 +82,58 @@
     },
     {
       "cell_type": "markdown",
+      "id": "eb2ac90f-833a-4f33-a370-7d23c336cb4a",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-search\"></i> \u67e5\u627eInvokeAI\u8fd4\u56de\u9879\u76ee\u6240\u5728\u8def\u5f84"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e3b8164a-fc51-4e9e-a5c6-968bfd77d813",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from func.checksum import generate_checksum,find_folder\n",
+        "\n",
+        "def find_dir(root_dir, target_name):\n",
+        "    paths = []\n",
+        "    for dirpath, dirnames, filenames in os.walk(root_dir):\n",
+        "        for dirname in dirnames:\n",
+        "            if dirname == target_name:\n",
+        "                path = os.path.join(dirpath, dirname)\n",
+        "                paths.append(path)\n",
+        "    paths.sort(key=len)\n",
+        "    if paths:\n",
+        "        return paths\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "# print(generate_checksum('/root/InvokeAI'))\n",
+        "# print(generate_checksum('/root/InvokeAI_runtime'))\n",
+        "\n",
+        "# \u901a\u8fc7\u6821\u9a8c\u548c\u7684\u65b9\u5f0f\u67e5\u627eInvokeAI\u7684github repo\u6587\u4ef6\u5939\n",
+        "InvokeAI_dir = None\n",
+        "# InvokeAI_dir = find_folder(root_dir,'827a2072f6f785ae0abf58be160b69b0e165b9a28eb2a69bae426eb268f90127')\n",
+        "\n",
+        "# \u5982\u679c\u627e\u4e0d\u5230\uff0c\u5219\u91c7\u7528\u4f4e\u9636\u7684\u529e\u6cd5\uff0c\u4e5f\u5c31\u662f\u6587\u4ef6\u5939\u540d\u79f0\u5b8c\u5168\u5339\u914d\u7684\u7248\u672c\u8fdb\u884c\u67e5\u627e\uff08\u56e0\u4e3arepo\u603b\u662f\u66f4\u65b0\uff0c\u4f1a\u5f71\u54cd\u6821\u9a8c\u548c\u7684\u7ed3\u679c\uff09\n",
+        "if not InvokeAI_dir:\n",
+        "    InvokeAI_dir=find_dir(root_dir, 'InvokeAI')[0]\n",
+        "    \n",
+        "print(InvokeAI_dir)\n",
+        "    \n",
+        "InvokeAI_runtime_dir = None\n",
+        "# InvokeAI_runtime_dir = find_folder(root_dir,'c7dd5c092639d9ac32ea5d1bbcaa9ec4ed9ade22d2c0c5621d395af5c1cda267')\n",
+        "if not InvokeAI_runtime_dir:\n",
+        "    InvokeAI_runtime_dir=find_dir(root_dir, 'InvokeAI_runtime')[0]\n",
+        "\n",
+        "print(InvokeAI_runtime_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "2daff019-2706-46e2-a87d-3cec853978a3",
       "metadata": {},
       "source": [
@@ -100,7 +152,7 @@
         "\n",
         "if env_name == 'AutoDL':\n",
         "    invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
-        "    invokeai_init_path='/root/invokeai/invokeai.init'\n",
+        "    invokeai_init_path=os.path.join(InvokeAI_runtime_dir,'./invokeai.init')\n",
         "elif env_name == 'OpenBayes':\n",
         "    invoke_outputs_dir=os.path.realpath(os.path.join(root_dir,'./invoke_outputs'))\n",
         "    invokeai_init_path=os.path.realpath(os.path.join(root_dir,'./invokeai/invokeai.init'))\n",
@@ -158,30 +210,28 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "\n",
-        "invokeai_dir=os.path.join(root_dir,'InvokeAI')\n",
-        "\n",
         "base_args = [\n",
         "    proxy,'&&',\n",
         "    'source activate','&&',\n",
         "    'conda activate invokeai','&&',\n",
-        "    f'cd {invokeai_dir}','&&'\n",
+        "    f'cd {InvokeAI_dir}','&&'\n",
         "]\n",
         "\n",
-        "\n",
-        "invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
+        "final_args = []\n",
+        "final_args += base_args\n",
         "\n",
         "git_pull_args = base_args[:] + ['git pull']\n",
         "git_pull_cmd = (\" \").join(git_pull_args)\n",
         "\n",
         "git_pull_info = !$git_pull_cmd\n",
         "\n",
+        "print(git_pull_info)\n",
+        "\n",
         "if 'Already up to date.' not in git_pull_info:\n",
         "    print('\u51c6\u5907\u66f4\u65b0...')\n",
         "    final_args.append([\n",
         "        'conda env update','&&',\n",
-        "        'python scripts/configure_invokeai.py -y --skip-sd-weights'\n",
+        "        f'python scripts/configure_invokeai.py -y --skip-sd-weights --root_dir {InvokeAI_runtime_dir}'\n",
         "    ])\n",
         "else:\n",
         "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\uff0c\u76f4\u63a5\u542f\u52a8')\n",
@@ -195,10 +245,11 @@
         "\n",
         "final_args = base_args[:]\n",
         "final_args += [\n",
-        "    'python scripts/invoke.py --model inpainting-1.5',\n",
+        "    f'python scripts/invoke.py --root_dir {InvokeAI_runtime_dir}',\n",
         "]\n",
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
+        "print(final_cmd)\n",
         "!$final_cmd"
       ]
     },
@@ -227,7 +278,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.15"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
